--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Stonemasons -- Juvenile fiction'
 - !lcsh 'Motherless families -- Juvenile fiction'
 - !lcsh 'Kings and rulers -- Juvenile fiction'
+- GITenberg
 title: Prentice Hugh
 url: http://www.gutenberg.org/ebooks/43170
